--- a/venta/.env
+++ b/venta/.env
@@ -2,18 +2,18 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:MHUuAiq3RGCN360ysfa81Q2gxajskPGm46X1A1ns/v4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://http://157.230.210.8/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=venta
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_USERNAME=admin
+DB_PASSWORD=abf71937e3220c388695be92e8c07bf2444f060f12adefd9
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
