--- a/venta/package.json
+++ b/venta/package.json
@@ -13,5 +13,8 @@
         "select2": "^4.1.0-rc.0",
         "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "n": "^9.1.0"
     }
 }
