--- a/venta/.env
+++ b/venta/.env
@@ -2,18 +2,18 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:MHUuAiq3RGCN360ysfa81Q2gxajskPGm46X1A1ns/v4=
 APP_DEBUG=true
-APP_URL=localhost
+APP_URL=https://fingerprints-vet.me/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=venta
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_USERNAME=admin
+DB_PASSWORD=be6303ee32122ace818b567ad0f82f5623b364f47d2c61d3
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
