--- a/venta/package.json
+++ b/venta/package.json
@@ -15,6 +15,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "country-state-city": "^3.1.4",
         "dropzone": "^6.0.0-beta.2",
         "n": "^9.1.0"
     }
